--- a/DAY2/008.html
+++ b/DAY2/008.html
@@ -17,16 +17,17 @@
             font-weight: 1000;
         }
 
-        figure, ul {
-            padding-right: 10px;
-        }
-
         ul {
             list-style-type: none;
         }
 
+        aside {
+            float: left;
+            padding: 10px;
+        }
         article {
             float: right;
+            padding: 10px;
         }
 
         footer {
@@ -50,26 +51,26 @@
     <div>
         <h2><b>About us</b></h2>
     </div>
-    <div>
-        <figure>
+    <figure>
+        <aside>
             <img height="120px" src="http://www.paullab.co.kr/images/logo_paullab.png" alt="">
             <figcaption>
                 바울랩
             </figcaption>
-        </figure>
-        <figure>
+        </aside>
+        <aside>
             <img height="120px" src="http://www.paullab.co.kr/images/logo_weniv.png" alt="">
             <figcaption>
                 위니브
             </figcaption>
-        </figure>
-        <figure>
+        </aside>
+        <aside>
             <img height="120px" src="http://www.paullab.co.kr/images/logo_jejucodingbasecamp.png" alt="">
             <figcaption>
                 제주코딩베이스캠프
             </figcaption>
-        </figure>
-    </div>
+        </aside>
+    </figure>
     <footer>
         <aside>
             <ul>
