--- a/DAY03/014.html
+++ b/DAY03/014.html
@@ -4,9 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>hello world</title>
+    <title></title>
 </head>
 <body>
-    <h1>hello world</h1>
+    <!-- 블록 요소 -->
+    <h1>hello</h1>
+    <h1>hello</h1>
+
+    <!-- 인라인 요소 -->
+    <img width="200px" src="img/a.jpg" alt="">
+    <img width="200px" src="img/a.jpg" alt="">
 </body>
 </html>
