--- a/DAY03/015.html
+++ b/DAY03/015.html
@@ -4,9 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>hello world</title>
+    <title>CSS 기본</title>
+    <style>
+        h1 {
+            color: red;
+        }
+    </style>
 </head>
 <body>
-    <h1>hello world</h1>
+    <!-- 
+        1. 내부 CSS
+        2. 외부 CSS
+        3. 인라인 CSS
+     -->
+     <h1>hello world</h1>
 </body>
 </html>
