--- a/DAY03/017_외부css_import.html
+++ b/DAY03/017_외부css_import.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>hello world</title>
+    <title>hello</title>
+    <style type="text/css">
+        @import "016.css";
+        @import url(016test.css);
+    </style>
 </head>
 <body>
-    <h1>hello world</h1>
+    
 </body>
 </html>
