--- a/DAY03/018_인라인css.html
+++ b/DAY03/018_인라인css.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>hello world</title>
+    <title>인라인 css</title>
+    <link rel="stylesheet" href="016test.css">
 </head>
 <body>
-    <h1>hello world</h1>
+    <h1 style="color:red;">hello world</h1>
 </body>
 </html>
