--- a/DAY04/051.html
+++ b/DAY04/051.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="ko">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,7 +9,7 @@
         @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
 
         font {
-            font-family: 'Poppins', sans-serif;
+            font-family : 'Poppins', sans-serif;
         }
 
         .weight-normal {
@@ -30,7 +29,6 @@
         }
     </style>
 </head>
-
 <body>
     <font>
         <p class="weight-normal">font-weight normal</p>
@@ -38,6 +36,6 @@
         <p class="weight-100">font-weight 100</p>
         <p class="weight-900">font-weight 900</p>
     </font>
+    <p>hello world</p>
 </body>
-
 </html>
