--- a/DAY04/061_문제점_해결.html
+++ b/DAY04/061_문제점_해결.html
@@ -6,10 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>float 문제점 해결</title>
     <style>
-        .wrap{
+        .wrap {
             border: 4px solid blue;
+            overflow: hidden;
         }
-        .content{
+        .content {
+            float: left;
             margin: 5px;
             height: 20px;
             border: 2px solid green;
