--- a/DAY07/084_svg.html
+++ b/DAY07/084_svg.html
@@ -16,7 +16,7 @@
 
         @keyframes blink {
             to {
-                transform: scaleY(˜0.1);
+                transform: scaleY(0.1);
             }
         }
     </style>
