--- a/DAY21/001.html
+++ b/DAY21/001.html
@@ -1,23 +1,22 @@
 <!DOCTYPE html>
 <html lang="ko">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <!-- <link rel="stylesheet" href="reset.css"> -->
     <style>
-        .box {
-            height: 300px;
-            width: 300px;
-            background-color: blue;
-            transition: all 2s;
-        }
+      .box {
+        height: 300px;
+        width: 300px;
+        background-color: blue;
+        transition: all 2s;
+      }
     </style>
-</head>
+  </head>
 
-<body>
+  <body>
     <h1>ㅎㅏ하하하하</h1>
 
     <!-- javascript 소개 -->
@@ -35,12 +34,8 @@
             <p id="demoTwo"></p>
             <p class="box" id="demoThree"></p> -->
 
+    <h1 id="title">Hello World</h1>
 
-
-
-    <h1 id='title'>Hello World</h1>
-
-    <script src="js3.js"></script>
-</body>
-
+    <script src="002.js"></script>
+  </body>
 </html>
